2006-07-20  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: Even more parameter types added.
        
        * plug-ins/test.rb: Split the dialog test into two seperate procedures.
          Added the new parameter types to the tests.
          
        * gimp-lib/gimp.rb: Made Gimp.Color a module function so that it's
          available without including the Gimp module.
        
        * gimp-lib/gimp_oo.rb: Put ensure blocks on the paired procedures.
        
        * plug-ins/sphere.rb: Updated to use OO types and new parameter types.

2006-07-19  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: More parameter types added.
        
        * plug-ins/test.rb: Added more parameter types to the dialog test
          procedure.

2006-07-19  Scott Lembcke <lemb0029@gnome.org>

        * ext/rbgimpdialog.c: More parameter types added.
        
        * gimp-lib/rubyfu.rb: Added RubyFu::ParamDef subtypes. Connected the
          dialog code to run for interactive mode.
        
        * plug-ins/test.rb: Added more parameter types to the dialog test
          procedure.
          
2006-07-19  Kevin Cozens  <kcozens@cvs.gnome.org>

	* ext/rbgimpdialog.c: Added missing declaration for mRubyFu.

2006-07-18  Scott Lembcke <lemb0029@gnome.org>

        * ext/Makefile.am: Added ext/rbgimpdialog.c.
        
        * Added ext/rbgimpdialog.c.
        
        * ext/conversion.c: Removed some stray blank lines.
        
        * ext/rbgimp.c: Added a call to initialize the dialog code.
        
        * ext/rbgimp.h: Added the dialog init function prototype.
        
        * plug-ins/test.rb: Added a procedure to run the dialog.
        
2006-07-10  Scott Lembcke <lemb0029@gnome.org>

        * ext/*.c: Style fixes. Swapped stdlib functions for glib ones.
        
2006-07-08  Scott Lembcke <lemb0029@gnome.org>

        * Added plug-in/test.rb.
        
        * gimp-lib/gimp_oo.rb: Complete re-implementation of gimp OO types.